# my_sudoku

./: CMakeLists.txt  README.md  auto_create_cmake.py
include/: sudoku.hpp
src/: main.cpp
